fix whitespace

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -229,7 +229,7 @@ h6 {
   top: 0;
   left: 0;
   right: 0;
-  padding-top: 92px;
+  /* padding-top: 92px; */
 }
 
 main {
